Implemented api's for eventattendees and employeesofevent